# ORNG-ENGINE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Changelog.txt  LICENSE  OAR.sln  OpenGL OGLDEV.sln  README.md  UNREAL 8.sln  imgui.ini  suppression_mappings.txt  vcpkg.json
Game/: .gitignore  CMakeLists.txt  Changelog.txt
Game/Fractal-game/: imgui.ini
Game/Fractal-game/base-project/: imgui.ini  scene.yml
Game/headers/: GameLayer.h
Game/src/: GameLayer.cpp  main.cpp
ORNG Core/: CMakeLists.txt  imgui.ini
ORNG Core/headers/: EngineAPI.h
ORNG Core/headers/components/: Component.h  ComponentAPI.h
ORNG Core/headers/core/: CodedAssets.h  Window.h
ORNG Core/headers/events/: EventManager.h  Events.h
ORNG Core/headers/layers/: Layer.h  LayerStack.h
ORNG Core/headers/rendering/: EnvMapLoader.h  MeshAsset.h  Renderer.h  SceneRenderer.h
ORNG Core/headers/scene/: MeshInstanceGroup.h  Scene.h  SceneSerializer.h
ORNG Core/headers/terrain/: TerrainGenerator.h
ORNG Core/headers/util/: UUID.h
ORNG Core/res/shaders/: BRDFConvolutionFS.glsl  DepthFS.glsl  GBufferFS.glsl  GBufferVS.glsl  QuadFS.glsl  SkyboxDiffusePrefilterFS.glsl
ORNG Core/src/: main.cpp
ORNG Core/src/components/: Component.cpp  PhysicsComponent.cpp
ORNG Core/src/core/: Window.cpp
ORNG Core/src/framebuffers/: Framebuffer.cpp
ORNG Core/src/layers/: LayerStack.cpp
ORNG Core/src/rendering/: VAO.cpp
ORNG Core/src/scene/: Scene.cpp  ScenePostProcessing.cpp  SceneSerializer.cpp
ORNG Editor/: CMakeLists.txt  ORNG Editor.vcxproj  ORNG Editor.vcxproj.filters  imgui.ini  scene.yml
ORNG Editor/headers/: EditorCamera.h  EditorLayer.h
ORNG Editor/res/shaders/: BloomDownsampleCS.glsl  BloomUpsampleCS.glsl  BlurFS.glsl  DepthFS.glsl  FogCS.glsl  GBufferFS.glsl  GBufferVS.glsl  GridFS.glsl  HDR_ToCubemapFS.glsl  HighlightFS.glsl  LightingFS.glsl  LightingVS.glsl  PostProcessFS.glsl  SkyboxDiffusePrefilterFS.glsl  TransformVS.glsl
ORNG Editor/src/: EditorCamera.cpp  EditorLayer.cpp  pch.cpp
ORNG-Core/: CMakeLists.txt  OAR.vcxproj
ORNG-Core/Debug/ORNG-Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ORNG-Core.lastbuildstate
ORNG-Core/headers/: EngineAPI.h
ORNG-Core/headers/assets/: Asset.h  AssetManager.h  AssetSerializer.h  PhysXMaterialAsset.h  Prefab.h  SceneAsset.h  SoundAsset.h
ORNG-Core/headers/audio/: AudioEngine.h
ORNG-Core/headers/components/: AudioComponent.h  BillboardComponent.h  BoundingVolume.h  CameraComponent.h  Component.h  ComponentAPI.h  ComponentSystems.h  DecalComponent.h  Lights.h  MeshComponent.h  ParticleBufferComponent.h  ParticleComponent.h  ParticleEmitterComponent.h  PhysicsComponent.h  ScriptComponent.h  TransformComponent.h  VehicleComponent.h
ORNG-Core/headers/core/: Application.h  AssetManager.h  CodedAssets.h  FrameTiming.h  GLStateManager.h  Input.h  Window.h
ORNG-Core/headers/events/: EventManager.h  Events.h
ORNG-Core/headers/framebuffers/: Framebuffer.h  FramebufferLibrary.h
ORNG-Core/headers/layers/: ImGuiLayer.h  Layer.h  LayerStack.h  RuntimeSettings.h
ORNG-Core/headers/pch/: pch.h
ORNG-Core/headers/physics/: Physics.h
ORNG-Core/headers/rendering/: EnvMapLoader.h  Material.h  MeshAsset.h  Quad.h  RenderGraph.h  Renderer.h  SceneRenderer.h  Textures.h  VAO.h
ORNG-Core/headers/scene/: EntityNodeRef.h  GridMesh.h  MeshInstanceGroup.h  Scene.h  SceneEntity.h  SceneManager.h  ScenePostProcessing.h  SceneSerializer.h  SerializationUtil.h  Skybox.h
ORNG-Core/headers/scripting/: SI.h  SceneScriptInterface.h  ScriptAPI.h  ScriptAPIImpl.h  ScriptInstancer.h  ScriptShared.h  ScriptingEngine.h
ORNG-Core/headers/shaders/: Shader.h  ShaderLibrary.h
ORNG-Core/headers/terrain/: ChunkLoader.h  Terrain.h  TerrainChunk.h  TerrainGenerator.h  TerrainQuadtree.h
ORNG-Core/headers/util/: ExtraMath.h  ExtraUI.h  InterpolatorSerializer.h  Interpolators.h  Log.h  LoggerUI.h  TimeStep.h  Timers.h  UUID.h  util.h
ORNG-Core/res/meshes/: Sphere.glb.omesh  cube.glb.omesh  cube.obmesh  sphere.obmesh
ORNG-Core/res/script-template/: CMakeLists.txt
ORNG-Core/res/shaders/: BRDFConvolutionFS.glsl  BloomCompositeCS.glsl  BloomDownsampleCS.glsl  BloomThresholdCS.glsl  BlurFS.glsl  BuffersINCL.glsl  ColorFS.glsl  ColourFS.glsl  CommonINCL.glsl  ConeTraceCS.glsl  CubemapShadowVS.glsl  CubemapVS.glsl  DepthAwareUpsampleCS.glsl  DepthFS.glsl  DepthVS.glsl  EmptyCompute.glsl  EmptyVSFS.glsl  FogCS.glsl  GBufferFS.glsl  GBufferTCS.glsl  GBufferTES.glsl  GBufferVS.glsl  HDR_ToCubemapFS.glsl  LightingCS.glsl  LightingINCL.glsl  MipMap3D.glsl  ParticleAppendTransferCS.glsl  ParticleBuffersINCL.glsl  ParticleCS.glsl  ParticleInitializerCS.glsl  ParticleVS.glsl  PortalCS.glsl  PostProcessCS.glsl  QuadFS.glsl  QuadVS.glsl  ReflectionFS.glsl  ReflectionVS.glsl  SSAOCS.glsl  SceneVoxelizationFS.glsl  ShadowsINCL.glsl  (+9 more)
ORNG-Core/script-template/: CMakeLists.txt
ORNG-Core/script-template/headers/: ScriptAPIImpl.cpp
ORNG-Core/src/: stb_image.cpp
ORNG-Core/src/assets/: AssetManager.cpp  AssetSerializer.cpp  AssetsImpl.cpp
ORNG-Core/src/audio/: AudioEngine.cpp  AudioSystem.cpp
ORNG-Core/src/components/: AudioComponent.cpp  Camera.cpp  Component.cpp  MeshComponent.cpp  ParticleEmitterComponent.cpp  PhysicsComponent.cpp  ScriptComponent.cpp  TransfomHierarchySystem.cpp  TransformComponent.cpp  VehicleComponent.cpp
ORNG-Core/src/core/: Application.cpp  AssetManager.cpp  GLStateManager.cpp  Window.cpp
ORNG-Core/src/events/: EventManager.cpp
ORNG-Core/src/framebuffers/: Framebuffer.cpp  FramebufferLibrary.cpp
ORNG-Core/src/layers/: ImGuiLayer.cpp  (+1 more)
ORNG-Editor/: CMakeLists.txt  ORNG Editor.vcxproj  ORNG Editor.vcxproj.filters  imgui.ini
ORNG-Editor/headers/: AssetManagerWindow.h  EditorCamera.h  EditorEventStack.h  EditorLayer.h  ExtraUI.h  LuaCLI.h  Settings.h
ORNG-Editor/src/: AssetManager.cpp  AssetManagerWindow.cpp  EditorCLI_Lib.lua  EditorEventStack.cpp  EditorLayer.cpp  ExtraUI.cpp  LuaCLI.cpp  main.cpp
ORNG-Runtime/: CMakeLists.txt
ORNG-Runtime/headers/: RuntimeLayer.h
ORNG-Runtime/src/: RuntimeLayer.cpp  main.cpp
(+695 files in other folders)
